Fix T66786: Audio SDL: Video editor Sound muted without muting it

Porting fix for SDL 2 audio formats from audaspace upstream.